crates/general/fixtures/invalid/chained_comparison.zt
-- Comparisons are non-associative in v0.

{
  bad = 1 < 2 < 3;
}
